--- a/templates/intern.html
+++ b/templates/intern.html
@@ -1,5 +1,5 @@
-<div class="card employee-card">
-    <div class="card-header">
+<div class="card employee-card shadow-sm">
+    <div class="card-header text-center internHdr">
         <h2 class="card-title">{{ name }}</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>{{ role }}</h3>
     </div>
