--- a/templates/intern.html
+++ b/templates/intern.html
@@ -1,4 +1,4 @@
-<div class="card employee-card shadow-sm">
+<div class="card employee-card shadow-sm mx-3 mt-5">
     <div class="card-header text-center internHdr">
         <h2 class="card-title">{{ name }}</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>{{ role }}</h3>
